ACC-2437 add creation of content to helm integration test